--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 body {
   background-size: cover 100%;
   font-family: 'europa', sans-serif;
-  background-color: #e6e7de;
+  background-color: #000;
   margin: auto ;
   width:100%;
 }
