--- a/css/resume.css
+++ b/css/resume.css
@@ -79,7 +79,7 @@
     padding: 5px;
   }
 
-  .resumeContentContainer .col-md-2, col-sm-2, col-xs-2{
+  .resumeContentContainer .col-md-2, .col-sm-2, .col-xs-2{
     display: none;
   }
   
