cleaned up all photos

--- a/css/main.css
+++ b/css/main.css
@@ -570,7 +570,8 @@ h2{
 }
 
 #aboutContent{
-  text-align: center;
+  font-size: 1.125em;
+  font-weight: 300;
 }
 
 /*------------------------------------------------------------------------*/
