--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
-
 body {
   background-size: cover 100%;
-  font-family: 'europa', sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: #e6e7de;
   margin: auto ;
   width:100%;
@@ -160,7 +159,21 @@ body {
 
 
 
+/*********************************************************/
+/******************* INDEX NAVIGATION  *******************/
+/*********************************************************/
+#index nav .navigation{
+  padding:0;
+  top:45%;
+}
 
+
+
+
+
+/*********************************************************/
+/******************* NAVIGATION STYLES *******************/
+/*********************************************************/
 .navigation{
   padding:150px 0px 0px 0px;
   position:fixed;
@@ -742,6 +755,9 @@ p{
 
 @media screen and (max-width:767px){
 
+  #index .navigation{
+    margin-top:0;
+  }
 
   .navigation{
     margin-top:30px;
