--- a/css/resume.css
+++ b/css/resume.css
@@ -1,172 +1,31 @@
-.resumeContentContainer .sansSerif{
-  font-family: 'Lato', sans-serif !important;
-}
-
-.resumeContentContainer .resume{
-  padding: 10px;
-}
-
-.projectInfo p{
-  font-size: 1.1em
-}
-
-
-
-
-
-
-
-/*p#portfolioName{
-  margin-left:-22.5px;
-}
-p#resumeName{
-  margin-left:-12.5px;
-}
-p#aboutName{
-  margin-left: -9px;
-}
-p#contactName{
-  margin-left: -16.5px;
-}*/
-
-
-
-/*------------------------------------------------------------*/
-/*--------------------------HEADER----------------------------*/
-/*------------------------------------------------------------*/
-
-.resumeContentContainer .headlines h4{
+#resume .category{
   text-transform: uppercase;
-  font-weight: 700 !important;
-  margin: 0 !important;
-  text-align:left;
-}
-
-.resumeContentContainer .address p{
-  font-weight: 700 !important;
-  margin: 0;
-  font-size:1em;
-}
-
-.resumeContentContainer .bullet{
-  font-weight: 300;
-}
-
-/*------------------------------------------------------------*/
-/*------------------------END HEADER--------------------------*/
-/*------------------------------------------------------------*/
-
-.resumeContentContainer .category{
-  text-transform: uppercase;
-  font-weight: 700 !important;
+  font-weight: 700 ;
   margin: 0;
   padding-top: 20px;
 }
 
-.resumeContentContainer .year{
+
+/* #skillsAndLanguages */
+/*************************************/
+#skillsAndLanguages li{
+  list-style: none;
+}
+
+.title{
+  text-transform: uppercase;
+  font-weight: 400;
+  margin: 0 ;
+  padding-top: 10px;
+}
+
+.resumeYear{
   text-align: right;
   font-weight: 100;
   padding-top: 10px;
-  padding-right: 0 !important;
+  padding-right: 5px ;
 }
 
-.resumeContentContainer .subCategory{
-  text-transform: uppercase;
-  font-weight: 400;
-  margin: 0 !important;
-  padding-top: 10px;
-}
-
-.resumeContentContainer .info{
-  margin: 0 !important;
-  font-weight: 300 !important;
-}
-
-.resumeContentContainer p{
-  margin: 0 !important;
-}
-
-
-/*------------------------------------------------------------*/
-/*------------------------EDUCATION---------------------------*/
-/*------------------------------------------------------------*/
-
-.resumeContentContainer .SVA{
-  padding: 0 !important;
-}
-
-.resumeContentContainer .VO{
-  padding: 0 !important;
-}
-
-
-
-@media screen and (max-width:768px){
-  .resumeContentContainer .resume{
-    padding: 5px;
-  }
-
-  .resumeContentContainer .col-md-2, .resumeContentContainer .col-sm-2, .resumeContentContainer .col-xs-2{
-    display: none;
-  }
-  
-  .resumeContentContainer .SVA:after{
-    content: " 2015";
-    font-weight: 100 !important;
-  }
-  
-  .resumeContentContainer .SUNY:after{
-    content: " 2011-2012";
-    font-weight: 100 !important;
-  }
-  
-  .resumeContentContainer .VO:after{
-    content: " 2015";
-    font-weight: 100 !important;
-  }
-  .resumeContentContainer .GLOW:after{
-    content: " 2015";
-    font-weight: 100 !important;
-  }
-
-  .resumeContentContainer .VAP:after{
-    content: " 2015";
-    font-weight: 100 !important;
-  }
-  
-  .resumeContentContainer .RA:after{
-    content: " 2014-2015";
-    font-weight: 100 !important;
-  }
-  
-  .resumeContentContainer .TA:after{
-    content: " 2014";
-    font-weight: 100 !important;
-  }
-  
-  .resumeContentContainer .HH:after{
-    content: " 2013-2015";
-    font-weight: 100 !important;
-  }
-  
-  .resumeContentContainer .SM:after{
-    content: " 2013";
-    font-weight: 100 !important;
-  }
-  
-  .resumeContentContainer p:before{
-    content: "-";
-    font-weight: 100;
-  }
-  
-  .resumeContentContainer .address:before{
-    display: none;
-  }
-}
-
-@media screen and (max-width: 320px){
-  .resumeContentContainer .resume{
-    padding: 5px !important;
-    margin: 0 !important;
-  }
+.infoContainer{
+  margin-top:0px;
 }
