--- a/css/resume.css
+++ b/css/resume.css
@@ -8,7 +8,8 @@
 
 /* #skillsAndLanguages */
 /*************************************/
-#skillsAndLanguages li{
+#skillsAndLanguages ul, #experience ul{
+  padding-left:0px;
   list-style: none;
 }
 
@@ -24,8 +25,4 @@
   font-weight: 100;
   padding-top: 10px;
   padding-right: 5px ;
-}
-
-.infoContainer{
-  margin-top:0px;
 }
