--- a/css/resume.css
+++ b/css/resume.css
@@ -1,3 +1,24 @@
+@font-face {
+    font-family: 'GothamRoundBold';
+    src: url('../fonts/gotham/GothamRnd-Bold.otf');
+}
+
+@font-face {
+    font-family: 'GothamRoundMedium';
+    src: url('../fonts/gotham/GothamRnd-Medium.otf');
+}
+
+@font-face {
+    font-family: 'GothamRoundBook';
+    src: url('../fonts/gotham/GothamRnd-Book.otf');
+}
+
+@font-face {
+    font-family: 'GothamRoundLight';
+    src: url('../fonts/gotham/GothamRnd-Light.otf');
+}
+
+
 #resume .category{
   text-transform: uppercase;
   font-weight: 700 ;
@@ -6,8 +27,38 @@
 }
 
 
+.row{
+  margin:0px;
+}
+
+
+/* heading */
+/************************************/
+
+#resumeName{
+  margin-left:15px;
+}
+
+#resumeName h3{
+  margin-bottom:0px;
+  font-family:'GothamRoundMedium';
+  text-transform: uppercase;
+  font-size:18px;
+}
+
+#resumeName h5{
+  font-family:'GothamRoundBook';
+  margin-top:5px;
+}
+
+
+
 /* #skillsAndLanguages */
 /*************************************/
+#skillsAndLanguages h6{
+  padding-bottom:5px;
+}
+
 #skillsAndLanguages ul, #experience ul{
   padding-left:0px;
   list-style: none;
@@ -15,14 +66,60 @@
 
 .title{
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 700;
   margin: 0 ;
-  padding-top: 10px;
+  padding-top: 5px;
 }
 
 .resumeYear{
   text-align: right;
-  font-weight: 100;
-  padding-top: 10px;
+  font-weight: 300;
+  padding-top: 5px;
   padding-right: 5px ;
 }
+
+.skillsSection li{
+  font-weight:300;
+}
+
+#lastRow{
+  margin-bottom:0;
+  margin-top:13px;
+}
+
+
+/* #experience */
+/*************************************/
+
+section#experience .position{
+  text-transform: uppercase;
+}
+
+section#experience ul.description li{
+  font-weight:300;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
