--- a/styles/main.css
+++ b/styles/main.css
@@ -9,15 +9,6 @@
 
 ***********************************/
 
-
-.test{
-	background-color:green;
-	box-sizing:border-box;
-	padding:0px;
-	text-align: center;
-	height:30px;
-}
-
 .noMargin{
 	margin:0px;
 }
@@ -33,6 +24,10 @@ body#home{
 	background-color:aquamarine;
 }
 
+nav, section{
+	display:inline;
+}
+
 .buttonName{
 	margin:auto;
 	position:absolute;
@@ -43,14 +38,14 @@ body#home{
 
 /* NAVIGATION */
 /************************************************************/
-.navButtonContainer{
+.navButtonContainer, .projectButtonContainer{
 	padding:0px;
 	text-align:center;
 	/*height:30px;*/
 	position:relative;
 }
 
-.navButtonContainer a{
+.navButtonContainer a, .projectButtonContainer a{
 	height:30px;
 	width:30px;
 	border-radius:30px;
@@ -78,12 +73,33 @@ body#home{
 #contactButton a{background-color:#522db8;}
 #contactButton p{color:#522db8;}
 
+
+
+/* project buttons */
+/************************************************************/
+
+
 @media screen and (min-width:769px){
 	.buttonName{
-		visibility:hidden;
+		opacity: 0;
+		-o-transition:opacity .3s ease-in;
+		-ms-transition:opacity .3s ease-in;
+		-moz-transition:opacity .3s ease-in;
+		-webkit-transition:opacity .3s ease-in;
+		transition:opacity .3s ease-in;
+
+/*		-o-transform:rotateY(90deg) 1s;
+		-ms-transform:rotateY(90deg) 1s;
+		-moz-transform:rotateY(90deg) 1s;
+		-webkit-transform:rotateY(90deg) 1s;
+		transform:rotateY(90deg) 1s;*/
+
+	}
+
+	a.navButton:hover ~ .buttonName, a.projectButton:hover ~ .buttonName{
+		opacity: 1;
+		/*transform:rotateY(0deg);*/
 	}
 }
-
-
 
 
