styling MV sections

--- a/styles/main.css
+++ b/styles/main.css
@@ -78,6 +78,9 @@ nav, main{
 /* project buttons */
 /************************************************************/
 
+#portfolio main section div{
+	height:60px;
+}
 
 @media screen and (min-width:769px){
 	.buttonName{
