--- a/styles/main.css
+++ b/styles/main.css
@@ -177,6 +177,14 @@ body.project .projectImages .center{
 	text-align: center;
 }
 
+
+@media screen and (min-width:768px){
+	body.project .projectImgPadding{
+		padding:50px 0;
+		background-color:white;
+	}
+}
+
 @media screen and (max-width:991px){
 	body.project .hideThis{
 		display:none;
