--- a/styles/main.css
+++ b/styles/main.css
@@ -34,7 +34,7 @@
 body{
 	background-color: rgb(53,57,54);
 	color:#fff;
-	padding: 30px;
+	padding:30px 0 !important;
 }
 
 nav, main{
@@ -93,7 +93,9 @@ nav, main{
 #contactButton a.navButton{background-color:rgb(138,115,138);}
 #contactButton a{color:rgb(138,115,138);}
 
-
+br#navBreak{
+	margin-bottom:30px;
+}
 
 
 /* PORTFOLIO */
@@ -136,6 +138,12 @@ section#M, section#V{
 /************************************************************************************************************/
 .container{
 	width:100%;
+	padding:0;
+}
+
+.row{
+	margin-left:0;
+	margin-right: 0;
 }
 
 /* TITLE / DESCRIPTION */
@@ -175,6 +183,11 @@ body.project .projectImages img{
 
 body.project .projectImages .center{
 	text-align: center;
+}
+
+body.project .projectImages .whiteBackground{
+	background-color:white;
+	
 }
 
 
