adding DeCecco and Neet

--- a/styles/main.css
+++ b/styles/main.css
@@ -229,6 +229,14 @@ body.project .projectImages .whiteBackground{
 	background-color:#fff;
 }
 
+
+
+/* NEET */
+/***************************************************/
+#neet #neetSquares{
+	padding:27px 0;
+}
+
 /************************************************************************************************************/
 /* END PROJECTS */
 
